--- a/index.Rmd
+++ b/index.Rmd
@@ -81,7 +81,7 @@ library(thesisdown)
 
 ```{r chunkopts, include=FALSE}
 knitr::opts_chunk$set(echo=FALSE, warning=FALSE, message=FALSE, 
-                      fig.align='center', dpi = 200,
+                      fig.align='center', dpi = 200, fig.pos = 'H',
                       dev.args=list(bg="transparent"), dev='png') #, dev='pdf'
 options(knitr.kable.NA = '')
 library(pROC)
